2013-05-07  Murray Cumming  <murrayc@murray.com>

	Fix the build with --enable-warnings=fatal

	* gdk/src/display.hg: Deprecate get_n_screens(), because the C function
	is deprecated, because it always returns 1. Therefore also add a default
	parameter value of 0 to get_screen().
	Added a GDK_DISABLE_DEPRECATION_WARNINGS undef so we can still use
	the deprecated API in our deprecated API.
	* demos/gtk-demo/example_change_display.cc: Adapt this, like the 
	C version has been adapted.

2013-05-07  Murray Cumming  <murrayc@murray.com>

	Fix the build with --enable-warnings=fatal, partly.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Add a define of
	GDK_DISABLE_DEPRECATION_WARNINGS, though I do not know why this is only
	necessary now, using GTK+ from git master.

3.8.1:

2013-04-29  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Gtk::Widget: Don't call signal_hide handlers on a widget being deleted.

	* gtk/src/widget.[hg|ccg]: Add custom C callbacks for signal_hide. Don't
	call signal_hide handlers or an on_hide() override on a widget while it is
	being deleted. This requires the latest glibmm from git master, where a bug
	in _WRAP_SIGNAL(..., custom_c_callback) has been fixed. Bug #605728.

3.8.0:

2013-04-05  Murray Cumming  <murrayc@murrayc.com>

	Widget: Add some new methods.

	* gtk/src/widget.hg: Add is_visible(),
	register_window() and unregister_window().

2013-04-03  Murray Cumming  <murrayc@murrayc.com>

	Update the generated GTK+ documentation.
	
	* gtk/src/gtk_docs.xml: Regenerate.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::IconInfo: Add async methods.
	
	* gtk/src/iconinfo.hg: Add load_icon_async(),
	load_symbolic_async(), load_symbolic_for_context().
	* tools/m4/convert_gtk.m4: Add a conversion for 
	AsyncResult.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::Settings: Add two new settings.
	
	* gtk/src/settings.hg: Wrap the new
	gtk-recent-files-enabled and gtk-primary-button-warps-slider
	properties.
