@@ -35,6 +35,7 @@
 #include <gdkmm/rectangle.h>
 #include <gdkmm/display.h>
 #include <gdkmm/displaymanager.h>
+#include <gdkmm/devicemanager.h>
 #include <gdkmm/screen.h>
 #include <gdkmm/general.h>
 
