@@ -1,3 +1,10 @@
+2013-05-18  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
+	Add missing includes in gdkmm.h and gtkmm.h.
+
+	* gdk/gdkmm.h:
+	* gtk/gtkmm.h: Add missing includes. Bug #699993.
+
 2013-05-07  Murray Cumming  <murrayc@murray.com>
 
 	Fix the build with --enable-warnings=fatal
